More Fixes, A Few Breaks
Fix issues with checkboxes not aligning with labels (breaks checkbox
appearance on mobile views).
Refine method for determining where to append menu items according to
screen size.  Add a boolean when we reach our "full" capacity and
overflow everything else, versus potentially inserting a smaller label
at the top.  Instead of doing a forEach based off of a jquery search for
all tab elements, we are going to find them all, read them to an array,
sort that array, and THEN figure out where they go.

Add touch-support for sorting items in settings menu.

Fix hover color on splash items.

Fix some instances where splash items wouldn't open the proper tab.

Remove items that are not enabled in Settings from splash screen.

Fix "settings" and "general" iFrames being added for no reason.

Cleanup of iFrame generation code.

Fix issues where drop nav would not work if page was loaded as mobile
and then resized to desktop.

--- a/css/style.css
+++ b/css/style.css
@@ -263,7 +263,8 @@ p {
 }
 
 label {
-	padding-top: 5px;
+	height: 33px;
+	padding: 6px 12px;
 }
 
 body ul {
@@ -358,6 +359,7 @@ input[type='button'] {
 
 .checkbox, .radio {
 	display: inline-block;
+	padding: 6px 12px;
 }
 
 .btn-group {
